
datadir = $(kde_datadir)/konsole
data_DATA = BlackOnLightColor.schema BlackOnLightYellow.schema BlackOnWhite.schema \
	Example.Schema GreenOnBlack.schema WhiteOnBlack.schema \
	default.Schema syscolor.schema Linux.schema XTerm.schema vim.schema \
  DarkPicture.schema LightPicture.schema Transparent.schema GreenTint.schema \
  Transparent_MC.schema GreenTint_MC.schema \
  Transparent_lightbg.schema \
  Transparent_darkbg.schema \
  linux.desktop mc.desktop shell.desktop su.desktop sumc.desktop \
  default.Keytab linux.keytab vt100.keytab vt420pc.keytab x11r5.keytab \
  README.Schema README.KeyTab screen.desktop

KDE_ICON = konsole

EXTRA_DIST = $(data_DATA)
