
konsole_other_datadir = $(kde_datadir)/konsole
konsole_other_data_DATA = BlackOnLightColor.schema BlackOnLightYellow.schema BlackOnWhite.schema \
	Example.Schema GreenOnBlack.schema WhiteOnBlack.schema \
	default.Schema syscolor.schema Linux.schema XTerm.schema vim.schema \
  DarkPicture.schema LightPicture.schema Transparent.schema GreenTint.schema \
  Transparent_MC.schema GreenTint_MC.schema \
  Transparent_lightbg.schema \
  Transparent_darkbg.schema \
  linux.desktop mc.desktop shell.desktop su.desktop sumc.desktop \
  default.Keytab linux.keytab vt100.keytab vt420pc.keytab x11r5.keytab \
  README.Schema README.KeyTab screen.desktop

profiledir = $(kde_datadir)/konsole/profiles
profile_DATA = 2shells 3shells 4shells 5shells

KDE_ICON = konsole opentermblue opentermred

EXTRA_DIST = $(konsole_other_data_DATA)
